Fix App Badge alignment

--- a/democracy/page/default_home/css/default_home.css
+++ b/democracy/page/default_home/css/default_home.css
@@ -262,7 +262,6 @@
 }
 
 #secondbadge {
-  width: max-content;
   overflow: visible;
 }
 
